Breadcrumb - Added breadcrumb wrapper to make sure overflow is scrollable inside it

--- a/scss/components/_breadcrumb.scss
+++ b/scss/components/_breadcrumb.scss
@@ -4,6 +4,10 @@
 	--#{$CSS_VAR_PFX}breadcrumb-border-color: var(--#{$CSS_VAR_PFX}bg-color-darker);
 }
 
+.breadcrumb-wrapper {
+	width: 100%;
+}
+
 .breadcrumb {
 	--#{$CSS_VAR_PFX}local-txt-color: var(--#{$CSS_VAR_PFX}breadcrumb-txt-color);
 	--#{$CSS_VAR_PFX}local-bg-color: var(--#{$CSS_VAR_PFX}breadcrumb-bg-color);
